dev_ws/log/build_2020-07-14_16-28-04/py_srvcli/stderr.log
  File "/home/gustavo/dev_ws/install/py_srvcli/lib/python3.8/site-packages/py_srvcli/client.py", line 10
    super().__init__('Service_Client'):
                                      ^
SyntaxError: invalid syntax

